deploy-kit/tuxedo-q/webui/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-webui
  labels:
    app.kubernetes.io/name: demo-webui
    app.kubernetes.io/part-of: tuxedo-to-camel-demo
