deploy-kit/tuxedo-q/webui/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webui
  namespace: NAMESPACE_PLACEHOLDER
  labels:
    app: webui
    app.kubernetes.io/name: webui
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: tuxedo-to-camel-demo
spec:
  to:
    kind: Service
    name: webui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
